--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "jest --watchAll --verbose --runInBand",
-        "start": "node ./build/index.js",
+        "start": "node ./src/index.js",
         "serve": "node dist/server.js",
         "lint": "eslint ./src",
         "webpack": "webpack -wd",
