--- a/package.json
+++ b/package.json
@@ -29,22 +29,15 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-async-errors": "^2.1.2",
-        "express-graphql": "^0.9.0",
-        "graphql": "^15.1.0",
-        "graphql-tag": "^2.10.3",
-        "graphql-tools": "^6.0.10",
         "helmet": "^3.21.2",
         "heroku-client": "^3.1.0",
         "heroku-ssl-redirect": "0.0.4",
         "joi-objectid": "^3.0.1",
-        "jsondiffpatch": "^0.4.1",
         "jsonwebtoken": "^8.5.1",
-        "lodash": "^4.17.15",
-        "mailgun-js": "^0.22.0",
+        "lodash.isequal": "^4.5.0",
         "moment": "^2.27.0",
         "mongoose": "^5.9.25",
         "mongoose-update-if-current": "^1.4.0",
-        "mongoose-update-versioning": "^0.1.1",
         "passport": "^0.4.1",
         "passport-facebook": "^3.0.0",
         "passport-github": "^1.1.0",
@@ -53,8 +46,6 @@
         "rate-limiter-flexible": "^2.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-final-form": "^6.4.0",
-        "webpack-dev-server": "^3.10.3",
         "winston": "^3.2.1",
         "winston-mongodb": "^3.0.2",
         "ws": "^7.3.1"
