--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "express-async-errors": "^2.1.2",
         "helmet": "^3.21.2",
         "heroku-client": "^3.1.0",
+        "heroku-self-ping": "^2.0.1",
         "heroku-ssl-redirect": "0.0.4",
         "joi-objectid": "^3.0.1",
         "jsonwebtoken": "^8.5.1",
