--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "passport-facebook": "^3.0.0",
         "passport-github": "^1.1.0",
         "passport-google-oauth": "^2.0.0",
+        "passport-instagram": "^1.0.0",
         "passport-twitter": "^1.0.4",
         "rate-limiter-flexible": "^2.0.0",
         "react": "^16.13.1",
