--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "redis": "^3.0.2",
+        "sitemap": "^6.3.3",
+        "stream": "0.0.2",
         "winston": "^3.2.1",
         "winston-mongodb": "^3.0.2",
-        "ws": "^7.3.1"
+        "ws": "^7.3.1",
+        "zlib": "^1.0.5"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
