--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "license": "ISC",
     "dependencies": {
         "@hapi/joi": "^17.1.0",
+        "array-move": "^3.0.1",
         "aws-sdk": "^2.708.0",
         "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
