--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "lodash.isequal": "^4.5.0",
         "mongoose": "^5.7.7",
         "mongoose-paginate-v2": "^1.3.18",
+        "mongoose-private-paths": "^0.7.0",
         "mongoose-update-if-current": "^1.4.0",
         "morgan": "^1.9.1",
         "node-schedule": "^2.0.0",
