--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "pm2": "^4.1.2",
         "randomstring": "^1.2.1",
         "redis": "^3.1.2",
+        "regenerator-runtime": "^0.13.7",
         "sitemap": "^7.0.0",
         "swagger-jsdoc": "^6.0.8",
         "swagger-ui-express": "^4.1.6",
