--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "helmet": "^4.1.0",
         "http-status": "^1.4.0",
         "joi": "^17.3.0",
+        "joi-objectid": "^3.0.1",
         "jsonwebtoken": "^8.5.1",
         "lodash.isequal": "^4.5.0",
         "mongoose": "^5.7.7",
