Web version is done

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ JWT_REFRESH_EXPIRATION_DAYS=30
 # Number of days after which an invite token expires
 JWT_INVITE_EXPIRATION_DAYS=2
 
+MONGOMS_DOWNLOAD_URL=https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1804-4.2.8.tgz
+MONGOMS_VERSION=4.2.8
