--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@types/jest": "^26.0.23",
         "array-move": "^3.0.1",
         "aws-sdk": "^2.904.0",
+        "axios": "^0.21.1",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "connect-redis": "^5.2.0",
