--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "scripts": {
         "start": "cross-env NODE_ENV=production node src/index.js",
         "dev": "cross-env NODE_ENV=development nodemon src/index.js",
+        "replenish": "cross-env NODE_ENV=production node src/replenish.js",
+        "replenish:dev": "cross-env NODE_ENV=development nodemon src/replenish.js",
+        "sendbonus": "cross-env NODE_ENV=production node src/sendBonus.js",
+        "sendbonus:dev": "cross-env NODE_ENV=development nodemon src/sendBonus.js",
+        "viewsreward": "cross-env NODE_ENV=production node src/viewsReward.js",
+        "viewsreward:dev": "cross-env NODE_ENV=development nodemon src/viewsReward.js",
         "test": "jest -i --colors --verbose --detectOpenHandles --watch",
         "test:watch": "jest -i --watchAll",
         "coverage": "jest -i --coverage",
