--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     ],
     "dependencies": {
         "@types/jest": "^26.0.23",
+        "apple-signin": "^1.0.9",
         "array-move": "^3.0.1",
         "aws-sdk": "^2.904.0",
         "axios": "^0.21.1",
