--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "express-mongo-sanitize": "^2.0.0",
         "express-rate-limit": "^5.0.0",
         "format-number": "^3.0.0",
+        "google-auth-library": "^7.9.2",
         "helmet": "^4.1.0",
         "http-status": "^1.4.0",
         "joi": "^17.3.0",
