--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "google-auth-library": "^7.9.2",
         "helmet": "^4.1.0",
         "http-status": "^1.4.0",
+        "i18next": "^21.6.2",
         "joi": "^17.3.0",
         "joi-objectid": "^3.0.1",
         "jsonwebtoken": "^8.5.1",
