--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "sendbonus:dev": "cross-env NODE_ENV=development nodemon src/sendBonus.js",
         "viewsreward": "cross-env NODE_ENV=production node src/viewsReward.js",
         "viewsreward:dev": "cross-env NODE_ENV=development nodemon src/viewsReward.js",
+        "updateDB": "cross-env NODE_ENV=production node src/updateDB.js",
+        "updateDB:dev": "cross-env NODE_ENV=development node src/updateDB.js",
         "test": "jest -i --colors --verbose --detectOpenHandles --watch",
         "test:watch": "jest -i --watchAll",
         "coverage": "jest -i --coverage",
