--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,5 +25,14 @@
         "indent": "off",
         "comma-dangle": "off",
         "semi": "off"
-    }
+    },
+    "import/no-extraneous-dependencies": [
+        "error",
+        {
+            "devDependencies": false,
+            "optionalDependencies": false,
+            "peerDependencies": false,
+            "packageDir": "./"
+        }
+    ]
 }
