--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
         "dev": "cross-env NODE_ENV=development nodemon src/index.js",
         "replenish": "cross-env NODE_ENV=production node src/replenish.js",
         "replenish:dev": "cross-env NODE_ENV=development nodemon src/replenish.js",
-        "sendbonus": "cross-env NODE_ENV=production node src/sendBonus.js",
-        "sendbonus:dev": "cross-env NODE_ENV=development nodemon src/sendBonus.js",
-        "viewsreward": "cross-env NODE_ENV=production node src/viewsReward.js",
-        "viewsreward:dev": "cross-env NODE_ENV=development nodemon src/viewsReward.js",
         "updateDB": "cross-env NODE_ENV=production node src/updateDB.js",
         "updateDB:dev": "cross-env NODE_ENV=development node src/updateDB.js",
         "test": "jest -i --colors --verbose --detectOpenHandles --watch",
@@ -29,32 +25,10 @@
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "prettier": "prettier --check **/*.js",
-        "prettier:fix": "prettier --write **/*.js",
-        "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
-        "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
-        "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up"
+        "prettier:fix": "prettier --write **/*.js"
     },
     "keywords": [
-        "node",
-        "node.js",
-        "boilerplate",
-        "generator",
-        "express",
-        "rest",
-        "api",
-        "mongodb",
-        "mongoose",
-        "es6",
-        "es7",
-        "es8",
-        "es9",
-        "jest",
-        "travis",
-        "docker",
-        "passport",
-        "joi",
-        "eslint",
-        "prettier"
+        "addspire"
     ],
     "dependencies": {
         "@types/jest": "^26.0.23",
@@ -70,7 +44,6 @@
         "expo-server-sdk": "^3.6.0",
         "express": "^4.17.1",
         "express-mongo-sanitize": "^2.0.0",
-        "express-rate-limit": "^5.0.0",
         "format-number": "^3.0.0",
         "google-auth-library": "^7.9.2",
         "helmet": "^4.1.0",
@@ -93,6 +66,7 @@
     "devDependencies": {
         "@babel/preset-env": "^7.14.4",
         "@babel/preset-react": "^7.13.13",
+        "@faker-js/faker": "^6.0.0-alpha.6",
         "coveralls": "^3.0.7",
         "eslint": "^7.0.0",
         "eslint-config-airbnb-base": "^14.0.0",
@@ -101,7 +75,6 @@
         "eslint-plugin-jest": "^24.0.1",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-security": "^1.4.0",
-        "faker": "^5.5.3",
         "jest": "^26.6.3",
         "lint-staged": "^10.0.7",
         "mongodb-memory-server": "^6.9.6",
